# server-backend

./: .env  Cargo.toml  README.MD  test.json
migrations/2021-02-10-211800_create_tables_table/: up.sql
migrations/2021-02-10-211950_create_clients/: up.sql
migrations/2021-02-10-212043_create_foods/: up.sql
migrations/2021-02-12-184503_create_variants/: down.sql  up.sql
migrations/2021-02-12-185352_create_orders/: up.sql
migrations/2021-05-22-174807_create_workers/: up.sql
migrations/2021-05-28-184427_add_data/: down.sql  up.sql
src/: consts.rs  main.rs  models.rs  schema.rs
src/mylib/: mod.rs
