[package]
name = "server-backend"
version = "0.1.0"
authors = ["Aaron-Uriel <therialaaronuriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql", "chrono", "bigdecimal"] }
dotenv = "0.15.0"
